@@ -291,7 +291,7 @@
               </blockquote>
               <div class="text-right">
                 <a href="cmd://apt-update" class="btn btn-inverse right"><span class="fa fa-refresh"></span> Update Sources List</a>
-                <a href="cmd://upgrade-appid?mate-desktop" class="btn btn-inverse right"><span class="fa fa-level-up"></span> Upgrade Installed Packages</a>
+                <a href="cmd://upgrade-appid?ubuntu-standard" class="btn btn-inverse right"><span class="fa fa-level-up"></span> Upgrade Installed Packages</a>
               </div>
               <hr class="soften"/>
 
