@@ -2,7 +2,10 @@ ubuntu-mate-welcome (16.04.4) UNRELEASED; urgency=medium
 
   * Fixed subscription updating.
   * Fixed RedNoteBook.
+  * Fixed Dropbox.
+  * Fixed Upgrade System, so it is compatible with Ubuntu MATE Base.
   * Added framework for accepting translations.
+  * Added Ardour, GNOME Software.
   * Added ubuntu-make PPA.
   * Updated Software to consistenly use the name Software Boutique.
   * Updated splash screen.
